--- a/ShoppingAssistant.Api/ShoppingAssistant.Api/ShoppingAssistant.Api.csproj
+++ b/ShoppingAssistant.Api/ShoppingAssistant.Api/ShoppingAssistant.Api.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+
   </ItemGroup>
 
 </Project>
