--- a/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
+++ b/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   http: ^0.13.6
   flutter_barcode_scanner: ^2.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
