--- a/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
+++ b/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.6
   flutter_barcode_scanner: ^2.0.0
   provider: ^6.0.5
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
