--- a/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
+++ b/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   provider: ^6.0.5
   charts_flutter: ^0.12.0
+  shared_preferences: ^2.1.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
