--- a/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
+++ b/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   charts_flutter: ^0.12.0
   shared_preferences: ^2.1.2
   flutter_rating_bar: ^4.0.1
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
