--- a/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
+++ b/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.1.2
   flutter_rating_bar: ^4.0.1
   fluttertoast: ^8.2.2
+  flutter_speech: ^2.0.0
 
 dev_dependencies:
   flutter_test:
