--- a/ShoppingAssistant.Mobile/shopping_assistant/android/app/src/main/AndroidManifest.xml
+++ b/ShoppingAssistant.Mobile/shopping_assistant/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.shopping_assistant">
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="shopping_assistant"
         android:name="${applicationName}"
