--- a/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
+++ b/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   fluttertoast: ^8.2.2
   flutter_speech: ^2.0.0
+  speech_to_text: ^6.1.1
+  permission_handler: ^10.4.1
 
 dev_dependencies:
   flutter_test:
