--- a/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
+++ b/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   flutter_speech: ^2.0.0
   speech_to_text: ^6.1.1
   permission_handler: ^10.4.1
+  geolocator: ^9.0.2
+  geocoding: ^2.1.0
+  google_maps_flutter: ^2.3.0
 
 dev_dependencies:
   flutter_test:
