--- a/ShoppingAssistant.Mobile/shopping_assistant/android/app/src/main/AndroidManifest.xml
+++ b/ShoppingAssistant.Mobile/shopping_assistant/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
     package="com.example.shopping_assistant">
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
    <application
         android:label="shopping_assistant"
         android:name="${applicationName}"
