--- a/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
+++ b/ShoppingAssistant.Mobile/shopping_assistant/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   geolocator: ^9.0.2
   geocoding: ^2.1.0
   google_maps_flutter: ^2.3.0
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
